--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Sinatra RPS</title>
@@ -7,6 +8,22 @@
   </head>
 
   <body>
+<div>
+  <a href="/rock">
+    Play Rock
+  </a>
+</div>
+
+<div>
+  <a href="/paper">
+    Play Paper
+  </a>
+</div>
+
+<div>
+  <a href="/scissors">
+    Play Scissors
+  </a>
 
     <%= yield %>
 
